--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 anyhow = "1.0.58"
 libc = "0.2.126"
-rand = "0.8.5"
+rand = { version = "0.8.5", features = ["min_const_gen"] }
