--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-anyhow = "1.0.58"
+gif = "0.11.3"
 libc = "0.2.126"
 rand = { version = "0.8.5", features = ["min_const_gen"] }
+
+[dev-dependencies]
+anyhow = "1.0.58"
